--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 blis==1.3.0
+gunicorn
 cachetools==5.5.2
 catalogue==2.0.10
 certifi==2025.4.26
